--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "@types/leaflet": "^1.9.14",
+    "@types/react-table": "^7.7.20",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "cypress": "^13.15.0",
@@ -44,6 +46,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
