--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,6 @@
     "forceConsistentCasingInFileNames": true,
     "types": ["jest", "node"]
   },
-  "include": ["src", "vite.config.ts", "jest.config.ts", "cypress"]
+  "include": ["src", "vite.config.ts", "jest.config.ts"],
+  "exclude": ["cypress"]
 }
